<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">GetBox</string>
    <string-array name="options_array">
        <item>Archivos</item>
        <item>Cuentas</item>
        <item>Configuración</item>
        <item>Cerrar sesión</item>
    </string-array>
    <string name="aboutversion">Versión 1.0.0.2</string>    
    
    <string name="aboutcopyright">\u00a9 2013&#8211;2014 GetBox Inc</string>    
    <string name="spaceAvaliable">Espacio disponible: </string>
    <string name="gb">GB</string>
    <string name="aboutrights">All rights reserved.</string>
    <string name="forward_page">Forward Page</string>
    <string name="salir">Salir</string>
    <string name="back_page">Back Page</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="new_account">Añade tu cuenta de Dropbox o Box</string>   
    <string name="dropbox">Dropbox</string> 
    <string name="box">Box</string>    
    <string name="delete_account">Eliminar cuenta</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="mail">Correo electrónico</string>
    <string name="name">Nombre</string>
    <string name="buttonLogin">Iniciar sesión</string>
    <string name="buttonRegister">Regístrate aquí si todavía no tienes una cuenta</string>    
    <string name="buttonRegisterNew">Crear cuenta</string>    
    <string name="buttonBack">Atras</string>
    <string name="action_plus">Anhadir</string>
    <string name="sinc_accounts">Cuentas vinculadas a </string>
     <string name="drpbx">Dropbox:</string> 
    <string name="bx">Box:</string> 
    <string name="config">Configuración de la cuenta </string>
    <string name="config_pass">Cambiar la contraseña</string>
    <string name="config_delete">Eliminar la cuenta</string>  
    <string name="pass_old">Contraseña actual</string>    
    <string name="pass">Nueva contraseña</string>
    <string name="pass_repeat">Repetir nueva contraseña</string>  
    <string name="change">Cambiar la contraseña</string>  
    <string name="del_account">Eliminar</string>     
    <string name="repassword">Repetir contraseña</string>  
    
</resources>
