<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:paddingLeft="8dp"
	    android:paddingRight="8dp"
	android:orientation="vertical" >
	<TextView 
	    android:id="@+id/textConfigName" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"	    
	    android:text= "@string/config"    
	    android:paddingTop="8dp"	
	    android:textStyle="bold"   
	    android:textSize="18sp"/> 
    
    <TextView 
	    android:id="@+id/textConfigUser"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:textColor="#8fb64f"
	    android:textSize="18sp"	        
	    android:paddingTop="8dp"	
	    android:paddingLeft="6dp"
	    android:textStyle="bold"
	    android:layout_toRightOf="@+id/textConfigName"
	    android:paddingBottom="10dp"/> 
	    
    <TextView 
	    android:id="@+id/textConfigPass1" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"	    
	    android:text= "@string/config_pass" 
	    android:textStyle="bold"   
	    android:paddingTop="8dp"	
	    android:layout_below=   "@+id/textConfigUser"
	    android:textSize="17sp"/>
    
    <TextView 
	    android:id="@+id/textConfigPassOld" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"	    
	    android:text= "@string/pass_old"    
	    android:paddingTop="10dp"	
	    android:layout_below=   "@+id/textConfigPass1"
	    android:textSize="17sp"/>
	    
    <EditText
       android:id="@+id/edtTxtConfigPassOld"
      
       android:inputType="textPassword"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/textConfigPassOld"
       android:layout_marginTop="5dp"  
	   android:textSize="17sp"
	   android:background="@drawable/rounded_edittext"
       android:textColor="@drawable/text_color" />
    
    <TextView 
	    android:id="@+id/textConfigPass2" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"	    
	    android:text= "@string/pass"    
	    android:paddingTop="10dp"	
	    android:layout_below=   "@+id/edtTxtConfigPassOld"
	    android:textSize="17sp"/>
	    
    <EditText
       android:id="@+id/edtTxtConfigPass1"
      
       android:inputType="textPassword"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/textConfigPass2"
       android:layout_marginTop="5dp"  
	   android:textSize="17sp"
	   android:background="@drawable/rounded_edittext"
       android:textColor="@drawable/text_color" />
    
    <TextView 
	    android:id="@+id/textConfigPass3" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"	    
	    android:text= "@string/pass_repeat"    
	    android:paddingTop="8dp"	
	    android:layout_below=   "@+id/edtTxtConfigPass1"
	    android:textSize="17sp"/>
    
    <EditText
       android:id="@+id/edtTxtConfigPass2"
      
       android:inputType="textPassword"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/textConfigPass3"
       android:layout_marginTop="5dp"  
	   android:textSize="17sp"
	   android:background="@drawable/rounded_edittext"
       android:textColor="@drawable/text_color" />
    

    <Button
        android:id="@+id/buttonCnfgChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtTxtConfigPass2"
        android:background="@drawable/button_background"
        android:text="@string/change"
        android:layout_marginTop="5dp"        
        android:layout_centerInParent="true"
        android:textColor="@drawable/text_color" />
    
    
    <TextView 
	    android:id="@+id/textConfigDelete" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"	    
	    android:text= "@string/config_delete"
	     android:layout_below=   "@+id/buttonCnfgChange"    
	    android:paddingTop="40dp"	
	    android:textStyle="bold"   
	    android:textSize="17sp"/>
    
    <TextView 
	    android:id="@+id/textConfigPassDel" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"	    
	    android:text= "@string/password"    
	    android:paddingTop="10dp"	
	    android:layout_below=   "@+id/textConfigDelete"
	    android:textSize="17sp"/>
    
    
    <EditText
       android:id="@+id/edtTxtConfigPassDel"
      
       android:inputType="textPassword"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/textConfigPassDel"
       android:layout_marginTop="5dp"  
	   android:textSize="17sp"
	   android:background="@drawable/rounded_edittext"
       android:textColor="@drawable/text_color" />
    
    <Button
        android:id="@+id/buttonCnfgDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtTxtConfigPassDel"
        android:background="@drawable/button_background"
        android:text="@string/del_account"
        android:layout_marginTop="5dp"        
        android:layout_centerInParent="true"
        android:textColor="@drawable/text_color" />

</RelativeLayout> 