<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
       android:id="@+id/imageViewLogin"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="10dp"
       android:src="@drawable/getbox_logo" />
    
   <TextView 
	    android:id="@+id/txtLgnUser" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"	    
       android:layout_below="@+id/imageViewLogin" 
	    android:text= "@string/username"	    	
        android:layout_marginTop="20dp"		  
	    android:textSize="12sp"/> 
	
   <EditText
       android:id="@+id/edtTxtLgnUser"
       android:inputType="text"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/txtLgnUser"
       android:layout_marginTop="5dp"  
	   android:textSize="12sp"/>
   
   <TextView 
	    android:id="@+id/txtLgnPass" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text= "@string/password"
		android:layout_below="@+id/edtTxtLgnUser"		
        android:layout_marginTop="18dp"	  
	    android:textSize="12sp"/>

   <EditText
       android:id="@+id/edtTxtLgnPass"
       android:inputType="textPassword"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/txtLgnPass"
       android:layout_marginTop="5dp"  
	   android:textSize="12sp"/>

   <Button
       android:id="@+id/buttonLgnLogin"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_below="@+id/edtTxtLgnPass"
       android:layout_marginTop="20dp"
       android:text="@string/buttonLogin" />

   <Button
       android:id="@+id/buttonLgnRegister"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/buttonLgnLogin"
       android:layout_alignBottom="@+id/buttonLgnLogin"
       android:layout_alignParentRight="true"
       android:text="@string/buttonRegister" />

</RelativeLayout>